infrastructure/old-issuing/openshift-resources/old-issuing-ingress.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: '2017-10-19T09:00:01Z'
  labels:
    app: issuing
  name: old-issuing-ingress
  namespace: old-issuing
  resourceVersion: '62590'
  selfLink: /api/v1/namespaces/old-issuing/services/old-issuing-ingress
  uid: e4259293-b4ab-11e7-8de8-eeb24a6bfd6a
spec:
  clusterIP: 172.30.228.185
  deprecatedPublicIPs:
    - 172.29.126.93
  externalIPs:
    - 192.168.43.26
  ports:
    - nodePort: 31234
      port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    name: old-issuing
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
      - ip: 172.29.126.93
