infrastructure/old-issuing/openshift-resources/old-issuing-minishift-route.yml
apiVersion: v1
kind: Route
metadata:
  creationTimestamp: null
  name: old-issuing.192.168.64.11.nip.io
spec:
  host: old-issuing.192.168.64.11.nip.io
  port:
    targetPort: 9100-tcp
  to:
    kind: Service
    name: old-issuing
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2017-09-28T09:46:31Z
      status: "True"
      type: Admitted
    host: old-issuing.192.168.64.11.nip.io
    routerName: router
    wildcardPolicy: None
